style: fix card horizontal location text too long style

--- a/components/card/card-horizontal.module.scss
+++ b/components/card/card-horizontal.module.scss
@@ -202,6 +202,7 @@
 
     @media (max-width: $screen-desktop-small) {
       flex-basis: 100%;
+      max-width: 100%;
 
       > span {
         @include with-line-clamp(1);
